--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Audio Tables</title>
+    <title>Audio Table</title>
     <style>
         table {
             width: 100%;
@@ -12,7 +12,7 @@
         }
         th, td {
             border: 1px solid #dddddd;
-            text-align: left;
+            text-align: center;
             padding: 8px;
         }
         th {
@@ -21,53 +21,111 @@
     </style>
 </head>
 <body>
-    <h1>Audio Files</h1>
-
-    <h2>Table 1</h2>
+    <h1>Audio Table</h1>
     <table>
         <tr>
-            <th>Audio</th>
-            <th>Player</th>
+            <th>Audio 1</th>
+            <th>Audio 2</th>
+            <th>Audio 3</th>
+            <th>Audio 4</th>
+            <th>Audio 5</th>
         </tr>
         <tr>
-            <td>Audio 1</td>
             <td>
                 <audio controls>
-                    <source src="audio_samples/09F_OHALLWAY_-5_sa1.wav" type="audio/mpeg">
+                    <source src="audio1.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio2.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio3.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio4.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio5.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </td>
         </tr>
         <tr>
-            <td>Audio 2</td>
             <td>
                 <audio controls>
-                    <source src="audio_samples/09F_SPSQUARE_-5_si1002.wav" type="audio/mpeg">
+                    <source src="audio6.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio7.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio8.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio9.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio10.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio>
             </td>
         </tr>
-        <!-- Add more audio rows as needed -->
+        <tr>
+            <td>
+                <audio controls>
+                    <source src="audio11.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio12.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio13.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio14.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+            <td>
+                <audio controls>
+                    <source src="audio15.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+        </tr>
     </table>
-
-    <h2>Table 2</h2>
-    <table>
-        <tr>
-            <th>Audio</th>
-            <th>Player</th>
-        </tr>
-        <tr>
-            <td>Audio 3</td>
-            <td>
-                <audio controls>
-                    <source src="audio_samples/24M_OHALLWAY_5_sa1.wav" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-        </tr>
-
-        <!-- Add more audio rows as needed -->
-    </table>
-
 </body>
 </html>
