--- a/index.html
+++ b/index.html
@@ -23,109 +23,155 @@
 <body>
     <h1>Audio Table</h1>
     <table>
-        <tr>
-            <th>Audio 1</th>
-            <th>Audio 2</th>
-            <th>Audio 3</th>
-            <th>Audio 4</th>
-            <th>Audio 5</th>
-        </tr>
-        <tr>
-            <td>
-                <audio controls>
-                    <source src="audio1.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio2.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio3.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio4.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio5.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <audio controls>
-                    <source src="audio6.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio7.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio8.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio9.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio10.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <audio controls>
-                    <source src="audio11.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio12.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio13.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio14.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-            <td>
-                <audio controls>
-                    <source src="audio15.mp3" type="audio/mpeg">
-                    Your browser does not support the audio element.
-                </audio>
-            </td>
-        </tr>
+        <thead>
+            <tr>
+                <th></th>
+                <th>Clean</th>
+                <th>Noisy</th>
+                <th>Paradiffuse</th>
+                <th>Udiffse</th>
+                <th>Fudiffse</th>
+                <th>SGMSE</th>
+                <th>Supervised</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Audio1</td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_clean.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_noisy.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_paradiffuse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_udiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_fudiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_sgmse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio1_supervised.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+            </tr>
+            <tr>
+                <td>Audio2</td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_clean.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_noisy.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_paradiffuse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_udiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_fudiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_sgmse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio2_supervised.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+            </tr>
+            <tr>
+                <td>Audio3</td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_clean.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_noisy.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_paradiffuse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_udiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_fudiffse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_sgmse.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+                <td>
+                    <audio controls>
+                        <source src="audio3_supervised.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
