--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 17px 0;
         }
         th, td {
-            border: 1px solid #dddddd;
+            border: 3px solid #dddddd;
             text-align: center;
             padding: 5px;
         }
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <h1>Audio Table</h1>
+    <h1>WSJ-QUT</h1>
     <table>
         <thead>
             <tr>
@@ -40,43 +40,43 @@
                 <td>Audio1 (STREET-KG-2; -5dB)</td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_clean.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_clean.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_noisy.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_noisy.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_paradiffuse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_paradiffuse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_udiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_udiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_fudiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_fudiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_sgmse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_sgmse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio1_supervised.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio1_supervised.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -85,43 +85,43 @@
                 <td>Audio2 (CAFE-CAFE-2; -5dB) </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_clean.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_clean.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_noisy.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_noisy.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_paradiffuse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_paradiffuse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_udiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_udiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_fudiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_fudiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_sgmse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_sgmse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio2_supervised.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio2_supervised.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
@@ -132,43 +132,43 @@
                 <td>Audio3 (CAR-WINUPB-2; 0dB)</td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_clean.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_clean.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_noisy.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_noisy.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_paradiffuse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_paradiffuse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_udiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_udiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_fudiffse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_fudiffse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_sgmse.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_sgmse.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
                 <td>
                     <audio controls>
-                        <source src="./collect_samples/wsj_qut/audio3_supervised.wav" type="audio/mpeg">
+                        <source src="./collected_samples/wsj_qut/audio3_supervised.wav" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </td>
